tests/ui/consts/const-err-multi.stderr
error[E0080]: attempt to negate `i8::MIN`, which would overflow
  --> $DIR/const-err-multi.rs:1:19
   |
LL | pub const A: i8 = -i8::MIN;
   |                   ^^^^^^^^ evaluation of constant value failed here

note: erroneous constant encountered
  --> $DIR/const-err-multi.rs:4:19
   |
LL | pub const B: i8 = A;
   |                   ^

note: erroneous constant encountered
  --> $DIR/const-err-multi.rs:6:19
   |
LL | pub const C: u8 = A as u8;
   |                   ^

note: erroneous constant encountered
  --> $DIR/const-err-multi.rs:8:24
   |
LL | pub const D: i8 = 50 - A;
   |                        ^

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0080`.
